--- a/src/runtime-boot/init/Cargo.toml
+++ b/src/runtime-boot/init/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["LI Qing geding.lq@antgroup.com"]
 edition = "2018"
 
 [dependencies]
+anyhow = { version = "1.0", default-features = false }
 libc = "0.2.147"
+nix = { version = "0.26" }
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
