--- a/src/runtime-boot/init/Cargo.toml
+++ b/src/runtime-boot/init/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 libc = "0.2.147"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.104"
+nix = { version = "0.26" }
+anyhow = { version = "1.0", default-features = false }
