--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,14 @@ updates:
     open-pull-requests-limit: 1
     allow:
       - dependency-type: direct
-      - dependency-type: indirect
+
+  - package-ecosystem: "cargo"
+    directory: "/src/runtime-boot/init"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 1
+    allow:
+      - dependency-type: direct
 
   # Dependencies listed in go.mod
   - package-ecosystem: "gomod"
