--- a/src/runtime-boot/init/Cargo.toml
+++ b/src/runtime-boot/init/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 libc = "0.2.152"
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
-nix = { version = "0.26" }
+nix = { version = "0.27.1", features = ["mount"] }
 anyhow = { version = "1.0", default-features = false }
