--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - runner: sgx-ecc
+          - runner: sgx
             sgx_mode: HW
             kbc: cc-kbc
           - runner: ubuntu-22.04
