--- a/src/enclave-agent/Cargo.toml
+++ b/src/enclave-agent/Cargo.toml
@@ -14,7 +14,7 @@ clap = { version = "4.5.7", features = ["derive"] }
 env_logger = "0.11.3"
 
 image-rs = { git = "https://github.com/confidential-containers/guest-components.git", default-features = false, tag = "v0.9.0" }
-kata-sys-util = { git = "https://github.com/kata-containers/kata-containers", rev = "4b57c04c3379d6adc7f440d156f0e4c42ac157df" }
+kata-sys-util = { git = "https://github.com/kata-containers/kata-containers", tag = "3.7.0" }
 log = "0.4.22"
 protocols = { path = "../libs/protocols" }
 serde = "1.0.203"
