--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -17,8 +17,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-22.04]
-        go-version: [1.21.x, 1.22.x]
+        os: [ubuntu-22.04, ubuntu-24.04]
+        go-version: [1.23.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -41,7 +41,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.56.2
+          version: v1.60.3
           args: -v --timeout 5m
           working-directory: 'src/shim'
 
